--- a/views/archivio.ejs
+++ b/views/archivio.ejs
@@ -14,18 +14,17 @@
 
 
                                 <div class="card-body">
-                                    <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta
-                                        della
-                                        guerra e dei suoi orrori.</p>
+                                    <p class="card-text">Troiane</p>
 
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="col">
-                        <div class="card">
+                        <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/castigarlaLocandina.jpg" class="card-img-top" alt="...">
+                                <img src="images/capodannoLocandina.jpg" class="card-img-top" alt="...">
 
 
 
@@ -45,8 +44,7 @@
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
-                                    guerra e dei suoi orrori.</p>
+                                <p class="card-text">Lasca</p>
 
                             </div>
                         </div>
