--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -4,37 +4,127 @@
     <%-include("navbar") -%>
 
         <div class="container-fluid">
+
+            <!-- First Row -->
             <div class="row">
+
+                <!-- First Column -->
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <div class="img__wrap gallery-item">
+                        <img src="images/LascaLorenzo.jpg" class=" gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="gallery item" id="lasca" />
+                        <div class="img__description_layer">
+                            <p class="img__description">A cena con il Lasca</p>
+                        </div>
+                    </div>
 
-                    <img src="images/LascaLorenzo.jpg" class=" gallery-item w-100 shadow-1-strong rounded mb-4"
-                        alt="gallery item" id="lasca" />
+                    <div class="img__wrap gallery-item"><img src="images/MelodiePatrizia.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Melodie Stonate</p>
+                        </div>
+                    </div>
 
 
-                    <img src="images/MelodiePatrizia.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                        alt="" />
-                    <img src="images/gibsyNicco.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+
+                    <div class="img__wrap gallery-item"><img src="images/gibsyNicco.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Gibsy</p>
+                        </div>
+                    </div>
+                    <div class="img__wrap gallery-item"><img src="images/Giovannapanni.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Giovanni VIII</p>
+                        </div>
+                    </div>
+                    <div class="img__wrap gallery-item"><img src="images/panediferroBianca.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Pane di Ferro</p>
+                        </div>
+                    </div>
+
+
                 </div>
+
+                <!-- Second Column -->
 
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="images/papessa2018.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
-                    <img src="images/troiane.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
 
-                    <img src="images/GiovannaElodie.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                        alt="" />
+                    <div class="img__wrap gallery-item"><img src="images/papessa2018.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Giovanni VIII</p>
+                        </div>
+                    </div>
+
+                    <div class="img__wrap gallery-item"><img src="images/LucaLasca.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">A cena con il Lasca</p>
+                        </div>
+                    </div>
+
+                    <div class="img__wrap gallery-item"><img src="images/troiane.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Troiane</p>
+                        </div>
+                    </div>
+                    <div class="img__wrap gallery-item"><img src="images/GiovannaElodie.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Giovanni VIII</p>
+                        </div>
+                    </div>
+
+
                 </div>
-
+                <!-- Third Column -->
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="images/Gibsy sgabello.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                        alt="" />
-                    <img src="images/TignanoSandro.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                        alt="" />
 
-                    <img src="images/MelodiePaola.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="">
-                    <img src="images/panediferroMarlene.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                        alt="" />
+                    <div class="img__wrap gallery-item"><img src="images/Gibsy sgabello.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Gibsy</p>
+                        </div>
+                    </div>
+
+                    <div class="img__wrap gallery-item"><img src="images/TignanoSandro.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Tignano Festival</p>
+                        </div>
+                    </div>
+
+                    <div class="img__wrap gallery-item"><img src="images/DiegoCravatta.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Gibsy</p>
+                        </div>
+                    </div>
+
+                    <div class="img__wrap gallery-item"><img src="images/MelodiePaola.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Melodie Stonate</p>
+                        </div>
+                    </div>
+                    <div class="img__wrap gallery-item"><img src="images/panediferroMarlene.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Pane di Ferro</p>
+                        </div>
+                    </div>
+
+
+
+
                 </div>
 
+                <!-- Second Row -->
 
                 <div class="row">
                     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
