complete wrapping gallery

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -127,38 +127,129 @@
                 <!-- Second Row -->
 
                 <div class="row">
+
+                    <!-- First Column -->
                     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                        <img src="images/panediferroSimone.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
 
-                        <img src="images/libertàScarpe.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
-                        <img src="images/ShakeYasmine.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
-                        <img src="images/MelodieInchino.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
+                        <div class="img__wrap gallery-item"><img src="images/panediferroSimone.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Pane di Ferro</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/libertàScarpe.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Libertà Interrotte</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/ShakeYasmine.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Stanze Shakespiriane</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/MelodieInchino.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Melodie Stonate</p>
+                            </div>
+                        </div>
+                        <div class="img__wrap gallery-item"><img src="images/donneOcchiGrandi.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Donne dagli occhi grandi</p>
+                            </div>
+                        </div>
                     </div>
 
-
+                    <!-- Second Column -->
                     <div class="col-lg-4 mb-4 mb-lg-0">
-                        <img src="images/libertàLinda.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
-                        <img src="images/LascaLety.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
-                        <img src="images/DiegoGibsy.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
+
+                        <div class="img__wrap gallery-item"><img src="images/Ofelia.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Stanze Shakespiriane</p>
+                            </div>
+                        </div>
+                        <div class="img__wrap gallery-item"><img src="images/libertàLinda.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Libertà Interrotte</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/LascaLety.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">A cena con il Lasca</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/gibsy3.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Gibsy</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/DiegoGibsy.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Gibsy</p>
+                            </div>
+                        </div>
+
+
+
+
+
+
 
                     </div>
-
+                    <!-- Third Column -->
                     <div class="col-lg-4 mb-4 mb-lg-0">
-                        <img src="images/libertàMacchina.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
+
+                        <div class="img__wrap gallery-item"><img src="images/libertàMacchina.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Libertà Interrotte</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/sognoYasRicc.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Sogno di una notte di mezz'estate</p>
+                            </div>
+                        </div>
 
 
-                        <img src="images/libertàRiccardo.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="">
-                        <img src="images/panediferroBurba.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="" />
+                        <div class="img__wrap gallery-item"><img src="images/libertàRiccardo.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Libertà Interrotte</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/Donna.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Donna Donna Donna</p>
+                            </div>
+                        </div>
+
+                        <div class="img__wrap gallery-item"><img src="images/panediferroBurba.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Pane di Ferro</p>
+                            </div>
+                        </div>
+
+
                     </div>
 
 
