change attori page

--- a/views/archivio.ejs
+++ b/views/archivio.ejs
@@ -14,7 +14,7 @@
 
 
                                 <div class="card-body">
-                                    <p class="card-text">Troiane</p>
+                                    <p class="card-text"></p>
 
                                 </div>
                             </div>
@@ -30,7 +30,7 @@
 
                                 <div class="card-body">
                                     <p class="card-text">
-                                        Castigarla Spero</p>
+                                    </p>
 
                                 </div>
                             </div>
@@ -44,7 +44,7 @@
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Lasca</p>
+                                <p class="card-text"></p>
 
                             </div>
                         </div>
@@ -58,7 +58,7 @@
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Pane di Ferro</p>
+                                <p class="card-text"></p>
 
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Pane di Ferro</p>
+                                <p class="card-text"></p>
 
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Pane di Ferro</p>
+                                <p class="card-text"></p>
 
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Pane di Ferro</p>
+                                <p class="card-text"></p>
 
                             </div>
                         </div>
