--- a/views/attori.ejs
+++ b/views/attori.ejs
@@ -3,32 +3,62 @@
     <%-include("navbar") -%>
 
 
-        <div class="container-fluid">
+
+
+        <!-- <div class="album py-5 bg-dark">
+            <div class="container">
+
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <div class="card">
+                                <img src="images/Atteone2.jpg" class="card-img-top" alt="...">
 
 
 
-            <div class="card">
-                <img src="images/Atteone2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h2>Alessandra Niccolini</h2>
-                    <p class="card-text">Inizia con la Lega Italiana Improvvisazione Teatrale (LIIT) nel 1996, diretta
-                        da Giovanni
-                        Palanza e Marco Venienti, e
-                        consolida la sua esperienza frequentando il corso professionale del progetto Plexus Solaris
-                        guidato da Angelo Savelli,
-                        Giancarlo Nanni, Emanuela Kustermann ed altri professionisti. Attraverso workshop mirati,
-                        non ha mai smesso di studiare
-                        con Roberto Panici, Michele Di Mauro, Alfonso Santagata, Caludio Morganti… ed ha preso parte
-                        a produzioni di Riccardo
-                        Massai, Ugo Chiti, Marco Natalucci, Massimo Salvianti continuando fino ad oggi la
-                        collaborazione con Arca Azzurra e
-                        Compagnia Archetipo, oltre agli spettacoli di Teatro delle Stanze.</p>
+                                <div class="card-body">
+                                    <p class="card-text">Alessandra Niccolini</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <div class="card">
+                                <img src="images/DiegoCV.jpg" class="card-img-top" alt="...">
+
+
+
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Diego Conforti</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <div class="card">
+                                <img src="images/MirkoCV.jpg" class="card-img-top" alt="...">
+
+                            </div>
+
+                            <div class="card-body">
+                                <p class="card-text">Mirko Batoni</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
 
-
-
+ -->
 
 
 
