--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,9 @@
 </div>
 <footer id="footer">
     <div class="copyright">© Teatro delle Stanze</div>
-    <i class="icon fab fa-facebook-f"></i>
-    <i class="icon fab fa-instagram"></i>
-    <i class="icon fas fa-envelope"></i>
+    <a class="icon" href="https://www.facebook.com/teatrodellestanze"><i class="icon fab fa-facebook-f"></i></a>
+    <!-- <i class="icon fab fa-instagram"></i> -->
+    <a href="mailto:teatrodellestanze@libero.it"><i class="icon fas fa-envelope"></i></a>
 </footer>
 
 
