--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -43,7 +43,8 @@
                         <a class="dropdown-item" href="archivio">Archivio</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
+                <!-- Progetti -->
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Progetti
@@ -52,7 +53,7 @@
                         <a class="dropdown-item" href="#">La novella degli scacchi</a>
 
                     </div>
-                </li>
+                </li> -->
                 <li class="navbar-item dropdown">
                     <a class="nav-link" href="gallery" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Gallery</a>
