--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,14 +4,22 @@
 
 
             <!-- <img class=" image-center image-fluid" src="images/panediferroVagone2.jpg" alt="panediferro"> -->
-            <p id="aboutus">Il Teatro delle Stanze si costituisce associazione il 28.01.2008, a Poggibonsi (Siena), con
+
+            <h1 class="about"><b>Teatro delle Stanze</b></h1>
+            <hr>
+
+            <p class="aboutus">Il <b>Teatro delle Stanze</b> si costituisce associazione nel 2008, a <b>Poggibonsi</b>
+                in provincia di Siena, con
                 l’obiettivo di
                 creare
                 una
                 compagnia di teatro, a seguito del laboratorio teatrale tenutosi a partire da 2005 sotto la guida di
-                Massimo
-                Salvianti.
-                La genesi del laboratorio è stata possibile nell’ambito del progetto “teatro e memoria”, col quale il
+                <b>Massimo
+                    Salvianti</b>.
+                <br>
+            <p class="aboutus">La genesi del laboratorio è stata possibile nell’ambito del
+                progetto “teatro e memoria”,
+                col quale il
                 Comune
                 di
                 Poggibonsi ha voluto tradurre in spettacolo le testimonianze scritte dei sopravvissuti al bombardamento
@@ -35,8 +43,11 @@
                 che
                 il
                 teatro
-                offre, investendo sulle opportunità territoriali e nel teatro d’occasione.
-                Nel corso degli anni il gruppo ha subito molteplici evoluzioni, sia in termini di risorse umane che di
+                offre, investendo sulle opportunità territoriali e nel teatro d’occasione.</p>
+
+
+            <p class="aboutus">Nel corso degli anni il gruppo ha subito molteplici evoluzioni, sia in termini di risorse
+                umane che di
                 spunti
                 artistici, anche grazie alle svariate occasioni di visibilità avute nell’ambito di diversi festival,
                 rassegne e
@@ -65,8 +76,8 @@
                 dalla comune passione per l’arte recitativa, la necessità di dichiarare il proprio stile e la volontà di
                 far
                 bene il
-                teatro... ed al teatro!
-            </p>
+                teatro... ed al teatro!</p>
+
         </div>
 
         <%-include("footer") -%>
