--- a/views/carousel.ejs
+++ b/views/carousel.ejs
@@ -4,21 +4,30 @@
 
     <%-include("navbar") -%>
 
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/gibsyMirko.jpg" alt="First slide">
+                    <img class="d-block w-100" src="images/gibsyMirko Cropped.jpg" alt="First slide">
 
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/Melodie.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="images/Melodie Cropped.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/panediferro.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="images/PanediferroFisa Cropped.jpg" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/Giovanna1.jpg" alt="Fourth slide">
+                    <img class="d-block w-100" src="images/Giovanna1 Cropped.jpg" alt="Fourth slide">
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
         </div>
         <%-include("footer") -%>
