--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -11,10 +11,10 @@
                 <!-- First Column -->
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <div class="img__wrap gallery-item">
-                        <img src="images/LascaLorenzo.jpg" class=" gallery-item w-100 shadow-1-strong rounded mb-4"
-                            alt="gallery item" id="lasca" />
+                        <img src="images/PanediferroProsciutti Cropped.jpg"
+                            class=" gallery-item w-100 shadow-1-strong rounded mb-4" alt="gallery item" id="lasca" />
                         <div class="img__description_layer">
-                            <p class="img__description">A cena con il Lasca</p>
+                            <p class="img__description">Pane di Ferro</p>
                         </div>
                     </div>
 
@@ -118,6 +118,12 @@
                             <p class="img__description">Pane di Ferro</p>
                         </div>
                     </div>
+                    <div class="img__wrap gallery-item"><img src="images/cameriniGibsy.jpg"
+                            class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <div class="img__description_layer">
+                            <p class="img__description">Gibsy</p>
+                        </div>
+                    </div>
 
 
 
@@ -162,6 +168,12 @@
                                 class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
                             <div class="img__description_layer">
                                 <p class="img__description">Donne dagli occhi grandi</p>
+                            </div>
+                        </div>
+                        <div class="img__wrap gallery-item"><img src="images/panediferroDonne2 Cropped.jpg"
+                                class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                            <div class="img__description_layer">
+                                <p class="img__description">Pane di Ferro</p>
                             </div>
                         </div>
                     </div>
