--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <!-- Title Section -->
-<div class="container-fluid navigation-bar">
+<div class="container-fluid">
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
