--- a/views/archivio.ejs
+++ b/views/archivio.ejs
@@ -9,7 +9,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
+                                <img src="images/tagliodelboscoLocandina.jpg" class="card-img-top" alt="locandina">
 
 
 
@@ -24,7 +24,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/capodannoLocandina.jpg" class="card-img-top" alt="...">
+                                <img src="images/MelodieLocandina.jpg" class="card-img-top" alt="locandina2">
 
 
 
@@ -39,7 +39,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/lascalocandina.jpg" class="card-img-top" alt="...">
+                                <img src="images/panediferroLocandina1.jpg" class="card-img-top" alt="locandina3">
 
                             </div>
 
@@ -53,7 +53,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/panediferroLocandina1.jpg" class="card-img-top" alt="...">
+                                <img src="images/capodannoLocandina.jpg" class="card-img-top" alt="locandina4">
 
                             </div>
 
@@ -66,7 +66,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/panediferroLocandina2.jpg" class="card-img-top" alt="...">
+                                <img src="images/panediferroLocandina2.jpg" class="card-img-top" alt="locandina5">
 
                             </div>
 
@@ -79,7 +79,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/MelodieLocandina.jpg" class="card-img-top" alt="...">
+                                <img src="images/lascaLocandina.jpg" class="card-img-top" alt="locandina6">
 
                             </div>
 
@@ -92,7 +92,7 @@
                     <div class="col">
                         <div class="card shadow-sm">
                             <div class="card">
-                                <img src="images/tagliodelboscoLocandina.jpg" class="card-img-top" alt="...">
+                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="locandina7">
 
                             </div>
 
