--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
             <hr>
 
             <p class="aboutus">Il <b>Teatro delle Stanze</b> si costituisce associazione nel 2008, a <b>Poggibonsi</b>
-                in provincia di Siena, con
+                ,in provincia di Siena, con
                 l’obiettivo di
                 creare
                 una
