--- a/views/carousel.ejs
+++ b/views/carousel.ejs
@@ -7,7 +7,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/gibsyMirko Cropped.jpg" alt="First slide">
+                    <img class="d-block w-100" src="images/PanediferroMirko Cropped.jpg" alt="First slide">
 
                 </div>
                 <div class="carousel-item">
@@ -18,6 +18,9 @@
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/Giovanna1 Cropped.jpg" alt="Fourth slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/PanediferroCarlo Cropped.jpg" alt="Fifth slide">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
