--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,10 +22,12 @@
 
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Open+Sans:ital,wght@0,300;0,400;1,300&family=Raleway:wght@100;200&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
 
     <!-- Font Awesome Scripts -->
     <script src="https://kit.fontawesome.com/5b4ca23579.js" crossorigin="anonymous"></script>
