--- a/views/giovanni.ejs
+++ b/views/giovanni.ejs
@@ -1,7 +1,7 @@
 <%-include("header") -%>
 
     <%-include("navbar") -%>
-        <div class="container-fluid text-box">
+        <div class="container-fluid description">
             <div class="title">
                 <h1>
                     Giovanni VIII
