--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,11 +1,15 @@
 </div>
-<footer id="footer">
-    <div class="copyright">© Teatro delle Stanze</div>
-    <a class="icon" href="https://www.facebook.com/teatrodellestanze"><i class="icon fab fa-facebook-f"></i></a>
-    <!-- <i class="icon fab fa-instagram"></i> -->
-    <a href="mailto:teatrodellestanze@libero.it"><i class="icon fas fa-envelope"></i></a>
+<div class="container-fluid footer">
+    <footer id="footer">
+        <div class="copyright">© Teatro delle Stanze</div>
+        <a class="icon" href="https://www.facebook.com/teatrodellestanze"><i class="icon fab fa-facebook-f"></i></a>
+        <!-- <i class="icon fab fa-instagram"></i> -->
+        <a href="mailto:teatrodellestanze@libero.it"><i class="icon fas fa-envelope"></i></a><br>tel: +39 348 89 49 522
+        <br>+39 329 81 51 497<br>
+        email: teatrodellestanze@libero.it
 
-</footer>
+    </footer>
+</div>
 
 
 
