--- a/views/gibsy.ejs
+++ b/views/gibsy.ejs
@@ -21,21 +21,25 @@
         <div class="row">
             <div class="col-sm">
 
-
+                <hr>
                 <p>
+
                     Johann Trollmann è stato uno dei più promettenti pugili della Germania di fine anni ’20,
                     destinato a
                     dominare la categoria dei pesi medio/massimi col soprannome di Gibsy, negli stessi anni
                     in
                     cui
                     Hitler saliva al
-                    potere. Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva
+                    potere.
+                <p>Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva
                     l’ostilità
                     dei
                     nazisti che
-                    numerosissimi andavano ai sui incontri sperando di vederlo perdere.
+                    numerosissimi andavano ai sui incontri sperando di vederlo perdere.</p>
 
-                </p>
+
+
+                <hr>
             </div>
 
             <div class="col-sm">
@@ -47,24 +51,37 @@
 
         <div class="row">
 
-            <div class="col">
+            <div class="col-sm">
 
                 <img src="images/gibsy4.jpg" alt="gibsy4" class="image-fluid" id="gibsy4">
             </div>
+            <div class="col-sm">
+                <blockquote class="blockquote">
+                    <hr>
+                    <p><em>"Adesso difenditi, zingaro"</em></p>
+                    <hr>
+                </blockquote>
+
+            </div>
+
         </div>
 
 
 
         <div class="row">
             <div class="col-sm">
+                <hr>
                 <p>
+
                     Avvia il racconto Zirzow, l’allenatore di Gibsy che lo ha seguito per
                     tutta la carriera da professionista ma, a forza di evocarlo, egli appare sul palco e
                     comincia a
                     raccontare la sua parte di storia;
                     si alternano scene a due a racconti individuali, si intrecciano ai balli e canti del
                     campo
-                    Rom.</p>
+                    Rom.
+                </p>
+                <hr>
             </div>
             <div class="col-sm">
                 <img src="images/gibsypugni2.jpg" alt="gibsypugni2" id="gibsypugni2">
@@ -76,7 +93,10 @@
                 <img src="images/gibsy6.jpg" class="img-fluid" alt="gibsy6" id="gibsy6">
             </div>
 
+
+
             <div class="col-sm">
+                <hr>
                 <p>
                     Zirzow va a trovare i parenti di Gibsy
                     nel giorno in cui si celebra il funerale simbolico del pugile, scomparso in un
@@ -88,6 +108,7 @@
                     grande
                     campione ha escogitato, prima del suo declino.
                 </p>
+                <hr>
             </div>
 
         </div>
