--- a/views/melodiestonate.ejs
+++ b/views/melodiestonate.ejs
@@ -3,15 +3,17 @@
     <%-include("navbar") -%>
         <div class="container-fluid text-box">
             <div class="title">
-                <h1>Melodie Stonate-Jarring Notes
+                <h1>Melodie Stonate <br>
+                    <h2><em>Jarring Notes</em></h2>
                     <h3>
                         Regia di Marco Natalucci
                     </h3>
                 </h1>
             </div>
 
-            <p>Paola Lazzeri scrive quattro storie di vita e di malattia, dove la malattia è un pretesto per
-                raccontare la vita. All’origine
+            <p><b>Paola Lazzeri</b> scrive quattro storie di vita e di malattia, dove la malattia è un pretesto per
+                raccontare la vita.
+            <p>All’origine
                 c’è Quavio, una ONLUS senese che si occupa gratuitamente di assistenza domiciliare per malati
                 oncologici e presso nuclei
                 familiari fragili. A chiusura delle celebrazioni per il 25° anno dalla sua fondazione, nel 2016,
@@ -20,7 +22,8 @@
                 interpretare un testo
                 scelto direttamente dall’associazione ed orgogliosamente, in punta di piedi, abbiamo accettato di
                 confrontarci col
-                racconto di un disagio, cercando di affrontarlo con leggerezza, normalizzandolo. Siamo poi finiti
+                racconto di un disagio, cercando di affrontarlo con leggerezza, normalizzandolo.</p>
+            <p>Siamo poi finiti
                 col cambiare strada ed
                 oggi “Le melodie Stonate/Jarring notes” raccontano la NOSTRA storia, eh si perché la stessa autrice
                 di questo testo sa
@@ -28,7 +31,8 @@
                 monologhi con un po’
                 di timore, riverenza, accoratezza per poi comprendere però che, grazie alla regia di Marco
                 Natalucci, dovevamo
-                semplicemente essere “normali”. Pian piano è nata complicità, semplicità, reciprocità e tra le
+                semplicemente essere “normali”.</p>
+            <p>Pian piano è nata complicità, semplicità, reciprocità e tra le
                 attrici si è creata una
                 profonda armonia che ha anche a che fare con le loro storie personali: Elisa e Laura infatti non si
                 rincontravano da
@@ -36,8 +40,9 @@
                 scelto questo testo
                 per riiniziare, Vittoria poi è stata scelta dal gruppo come leader del progetto, proprio mentre la
                 sua vita aveva
-                qualche difficoltà. Ops… LORO in realtà si chiamano Alessandra, Patrizia, Lucia e Paola!!!
-                Questo racconto quindi s’ intreccia con le storie personali di tutti noi e sarà facile commuoversi
+                qualche difficoltà.</p>
+            <p> <em>Loro</em> in realtà si chiamano Alessandra, Patrizia, Lucia e Paola.
+                Questo racconto quindi s’ intreccia con le storie personali di tutti noi, e sarà facile commuoversi,
                 ma sarà anche
                 sorprendente sorridere capendo come il tema centrale sia la nostra melodia interiore, che dobbiamo
                 sempre ascoltare ed
