--- a/views/panediferro.ejs
+++ b/views/panediferro.ejs
@@ -9,16 +9,18 @@
 
             <img class="image-center image-fluid" src="images/panediferrovagone.jpg" alt="panediferro">
             <p style="padding-top: 7%">
-                Pane di Ferro nasce come spettacolo teatrale itinerante di attori e attrici e musicisti che
+                <b>Pane di Ferro</b> nasce come spettacolo teatrale itinerante di attori e attrici e musicisti che
                 raccontano
                 l’evoluzione storica e culturale di un territorio come la Valdelsa prendendo a spunto l’eterno tema
                 del
                 viaggio su
-                un tracciato\palcoscenico. L’espediente narrativo della ferrovia ha permesso così di raccontare
+                un tracciato\palcoscenico. <br>
+            <p>L’espediente narrativo della ferrovia ha permesso così di raccontare
                 l’incedere del tempo simulando un viaggio su di un treno immaginario, “navicella temporale” densa di
                 ricordi
                 e aneddoti di chi ha vissuto un'epoca trascorsa che permette a noi contempoanei di “tornare a
-                quel punto di partenza - citando Eliot- per conoscerlo per la prima volta”. La stessa magia del
+                quel punto di partenza - citando Eliot- per conoscerlo per la prima volta”.</p>
+            <p>La stessa magia del
                 viaggio
                 viene
                 proposta su palcoscenico dal Teatro delle Stanze con una narrazione su dei binari immaginari che
@@ -26,7 +28,9 @@
                 i mutamenti culturali, storici, umani che si sono succeduti sull’immutabile percorso di una ferrovia
                 nell’arco
                 di tempo che va dalla sua eclatante e pomposa apertura, fino agli eventi che ne hanno decretato
-                la definitiva dismissione. PANE DI FERRO è un quindi evento teatrale che ha una duplice possibilità
+                la definitiva dismissione.</p>
+            <p>
+                <b>Pane di Ferro</b> è un quindi evento teatrale che ha una duplice possibilità
                 scenica:
                 Lo spettacolo itinerante offre una partecipazione fisica anche del pubblico più spontanea, simulando
                 l’incedere
@@ -38,6 +42,8 @@
                 la
                 video art.
             </p>
+
+
 
         </div>
 
